--- a/index.html
+++ b/index.html
@@ -3692,7 +3692,7 @@ IMPORTANT INSTRUCTIONS:
 1. Generate exactly ${count} sentences, one for each word
 2. Each sentence should be in French with its Arabic translation
 3. For verbs, feel free to conjugate them in any tense (past, present, future, imperative, etc.)
-4. For nouns, you can use them in singular, plural, or dual form, but be consistent with the translation.
+4. For nouns, you can use them in singular, plural, or dual form, but be consistent with the translation. For instance, if you use plural in arabic, use plural in french.
 5. Make sentences of reasonable length (5-15 words)
 6. Make the sentences practical and useful for language learning
 7. Ensure the Arabic translation uses the exact word form provided (or a conjugated/declined form of it)
