new arabic words

--- a/index.html
+++ b/index.html
@@ -2897,7 +2897,32 @@
 {"tense1": "village", "tense2": "قَرْيَة / قُرًى / قَرْيَتَان / قُرًى / قَرْيَتَيْن", "type": "word"},
 {"tense1": "Le ton", "tense2": "نَغْمَة / نَغَمَات / نَغْمَتَان / نَغَمَاتٍ / نَغْمَتَيْن", "type": "word"},
 {"tense1": "Superficiel", "tense2": "ضَحَالَة / ضَحَالَات / ضَحَالَتَان / ضَحَالَاتٍ / ضَحَالَتَيْن", "type": "word"},
-{"tense1": "dominant", "tense2": "سَائِد / سَائِدُون / سَائِدَان / سَائِدِينَ / سَائِدَيْن", "type": "word"}
+{"tense1": "dominant", "tense2": "سَائِد / سَائِدُون / سَائِدَان / سَائِدِينَ / سَائِدَيْن", "type": "word"},
+{"tense1": "raison / cause", "tense2": "عِلَّة / عِلَل / عِلَّتَان / عِلَلٍ / عِلَّتَيْن", "type": "word"},
+{"tense1": "jonction", "tense2": "تَقَاطُع / تَقَاطُعَات / تَقَاطُعَان / تَقَاطُعَاتٍ / تَقَاطُعَيْن", "type": "word"},
+{"tense1": "Déplacer / supplanter", "tense2": "أَزَاحَ/يُزِيحُ/إِزَاحَة/أَزِحْ/يُزَاحُ/أُزِيحَ", "type": "verb"},
+{"tense1": "raisonnement", "tense2": "اِسْتِدْلَال / اِسْتِدْلَالَات / اِسْتِدْلَالَان / اِسْتِدْلَالَاتٍ / اِسْتِدْلَالَيْن", "type": "word"},
+{"tense1": "effondrer", "tense2": "تَفَتَّتَ/يَتَفَتَّتُ/تَفَتُّت/تَفَتَّتْ/يُتَفَتَّتُ/تُفُتِّتَ", "type": "verb"},
+{"tense1": "anormal", "tense2": "شَاذَّة / شَاذَّات / شَاذَّتَان / شَاذَّاتٍ / شَاذَّتَيْن", "type": "word"},
+{"tense1": "radical", "tense2": "جَذْرِيَّة / جَذْرِيَّات / جَذْرِيَّتَان / جَذْرِيَّاتٍ / جَذْرِيَّتَيْن", "type": "word"},
+{"tense1": "mode", "tense2": "مَوْضَة / مَوْضَات / مَوْضَتَان / مَوْضَاتٍ / مَوْضَتَيْن", "type": "word"},
+{"tense1": "paradoxe", "tense2": "مُفَارَقَة / مُفَارَقَات / مُفَارَقَتَان / مُفَارَقَاتٍ / مُفَارَقَتَيْن", "type": "word"},
+{"tense1": "Critique / crucial", "tense2": "حَرِجَة / حَرِجَات / حَرِجَتَان / حَرِجَاتٍ / حَرِجَتَيْن", "type": "word"},
+{"tense1": "Se jouer / se décider", "tense2": "حُسِمَ/يُحْسَمُ/حَسْم/اِحْسِمْ/يُحْسَمُ/حُسِمَ", "type": "verb"},
+{"tense1": "Amer", "tense2": "مَرِير / مَرِيرُون / مَرِيرَان / مَرِيرِينَ / مَرِيرَيْن", "type": "word"},
+{"tense1": "Être informé", "tense2": "اِطَّلَعَ/يَطَّلِعُ/اِطِّلَاع/اِطَّلِعْ/يُطَّلَعُ/اُطُّلِعَ", "type": "verb"},
+{"tense1": "Négligé / abandonné", "tense2": "مُهْمَلَة / مُهْمَلَات / مُهْمَلَتَان / مُهْمَلَاتٍ / مُهْمَلَتَيْن", "type": "word"},
+{"tense1": "Se précipiter", "tense2": "هَرَعَ/يَهْرَعُ/هَرَعَان/اِهْرَعْ/يُهْرَعُ/هُرِعَ", "type": "verb"},
+{"tense1": "prestige", "tense2": "وَجَاهَة / وَجَاهَات / وَجَاهَتَان / وَجَاهَاتٍ / وَجَاهَتَيْن", "type": "word"},
+{"tense1": "Vendalisme", "tense2": "تَخْرِيب / تَخْرِيبَات / تَخْرِيبَان / تَخْرِيبَاتٍ / تَخْرِيبَيْن", "type": "word"},
+{"tense1": "Ambulance", "tense2": "سَيَّارَةُ إِسْعَاف / سَيَّارَاتُ إِسْعَاف / سَيَّارَتَا إِسْعَاف / سَيَّارَاتِ إِسْعَافٍ / سَيَّارَتَيْ إِسْعَاف", "type": "word"},
+{"tense1": "Certifié", "tense2": "مُعْتَمَدَة / مُعْتَمَدَات / مُعْتَمَدَتَان / مُعْتَمَدَاتٍ / مُعْتَمَدَتَيْن", "type": "word"},
+{"tense1": "fuir (eau)", "tense2": "سَرَّبَ/يُسَرِّبُ/تَسْرِيب/سَرِّبْ/يُسَرَّبُ/سُرِّبَ", "type": "verb"},
+{"tense1": "Caprice / fantaisie", "tense2": "نَزْوَة / نَزْوَات / نَزْوَتَان / نَزْوَاتٍ / نَزْوَتَيْن", "type": "word"},
+{"tense1": "puissant", "tense2": "جَبَّارَة / جَبَّارَات / جَبَّارَتَان / جَبَّارَاتٍ / جَبَّارَتَيْن", "type": "word"},
+{"tense1": "Chewing gum", "tense2": "عُلْكَة / عُلَك / عُلْكَتَان / عُلَكٍ / عُلْكَتَيْن", "type": "word"},
+{"tense1": "broyer", "tense2": "طَحَنَ/يَطْحَنُ/طَحْن/اِطْحَنْ/يُطْحَنُ/طُحِنَ", "type": "verb"},
+{"tense1": "Acier", "tense2": "فُولَاذ / فُولَاذَات / فُولَاذَان / فُولَاذَاتٍ / فُولَاذَيْن", "type": "word"}
 ]
         };
 
